app/assets/stylesheets/static_pages.scss
/* ... */
.cd-close-info {
  /* close the interest point description - only on mobile */
  position: fixed;
  top: 0;
  right: 0;
  height: 44px;
  width: 44px;
}
.cd-close-info::after, .cd-close-info:before {
  content: '';
  position: absolute;
  left: 50%;
  top: 50%;
  bottom: auto;
  right: auto;
  background-color: #ea4a55;
  -webkit-transform: translateX(-50%) translateY(-50%) rotate(45deg);
  -moz-transform: translateX(-50%) translateY(-50%) rotate(45deg);
  -ms-transform: translateX(-50%) translateY(-50%) rotate(45deg);
  -o-transform: translateX(-50%) translateY(-50%) rotate(45deg);
  transform: translateX(-50%) translateY(-50%) rotate(45deg);
  -webkit-transition-property: transform 0.2s;
  -moz-transition-property: transform 0.2s;
  transition-property: transform 0.2s;
}
.cd-close-info::after {
  height: 2px;
  width: 16px;
}
.cd-close-info::before {
  height: 16px;
  width: 2px;
}
@media only screen and (min-width: 480px) {
  .cd-close-info {
    display: none;
  }
}

label {
	font-size: 1.5rem;
}

input:not([type]), input[type=text], input[type=password], input[type=email], input[type=url], input[type=time], input[type=date], input[type=datetime], input[type=datetime-local], input[type=tel], input[type=number], input[type=search], textarea.materialize-textarea{
	font-size: 1.3rem;
}

/* label color */
 .input-field label {
	 color: #000;
 }
 /* label focus color */
 input[type]:focus:not([readonly]) {
border-bottom: 1px solid #FF6B42;
box-shadow: 0 1px 0 0  #FF6B42;
}
 /* label underline focus color */
 .input-field input[type=text]:focus {
	 border-bottom: 1px solid #FF6B42;
	 box-shadow: 0 1px 0 0 #FF6B42;
 }
 /* valid color */
 .input-field input[type=text].valid {
	 border-bottom: 1px solid #000;
	 box-shadow: 0 1px 0 0 #000;
 }
 /* invalid color */
 .input-field input[type=text].invalid {
	 border-bottom: 1px solid #000;
	 box-shadow: 0 1px 0 0 #000;
 }
 /* icon prefix focus color */
 .input-field .prefix.active {
	 color: #000;
 }

.input-field label {
	color: #9e9e9e;
	font-size: 1.5rem;
	top: 0rem;
}

